<resources>
    <string name="app_name">Inventory Management</string>
    <string name="title_activity_inventory_management">InventoryManagementActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_product_name_here">Enter product name here</string>
    <string name="enter_product_code">Enter product code</string>
    <string name="product_description">Product description</string>
    <string name="image_content_description">product picture</string>
    <string name="save_button">SAVE</string>
    <string name="tap_to_snap">Tap to snap</string>
    <string name="product_image">Product Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="incoming_stock">Incoming Stock/Purchase</string>
    <string name="outgoing_stock">Outgoing Stock/Sales</string>
    <string name="supplier_s_name">Supplier/Product i.e ABC Ltd/Rice</string>
    <string name="quantity">Quantity/Unit</string>
    <string name="cost_price">Cost Price/Unit</string>
    <string name="sale_price">Sales Price/Unit</string>
    <string name="add_and_save">Add AND SAVE</string>
    <string name="total_stock">In-Store :</string>
    <string name="incoming">Incoming:</string>
    <string name="sales_out">Outgoing:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="inventory_record_and_history">Inventory Record and History</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_name">Product Name</string>
    <string name="price_list">Price List</string>
    <string name="history_and_records">History And Records</string>
    <string name="search_name">Search by name</string>
    <string name="confirm_total_price">Check Amount</string>
    <string name="discount">Discount</string>
    <string name="product_name1">Product Name</string>
    <string name="cashbook_title">Cashbook</string>
    <string name="bank_statement_title">Bank Account</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="dr">DR</string>
    <string name="cr">CR</string>
    <string name="purchase_journal_title">Purchase Journal/Record</string>
    <string name="sales_journal_title">Sales Journal/Record</string>
    <string name="product_transaction">Product Transaction</string>
    <string name="cashbook_bank_title">Cashbook and Bank</string>
    <string name="account_receivable_title">Account Receivables</string>
    <string name="view_by_category">View by Category</string>
    <string name="view_all">View All</string>
    <string name="from_mm_dd_yyyy">From: MM/dd/yyyy</string>
    <string name="to_mm_dd_yyyy">To: MM/dd/yyyy</string>
    <string name="date_enter">Date</string>
    <string name="amount_cash_bank">Amount</string>
    <string name="payment">Payment</string>
    <string name="collection">Collection</string>
    <string name="m_d_yy">m/d/yy</string>
    <string name="add_transaction">ADD TRANSACTION</string>
    <string name="nature_of_the_expenses">Nature of the Expenses</string>
    <string name="explanation_of_expenses">Cost of Sales are expenses directly related or traceable to the purchase
        of the goods or service ex. VAT paid, cost of delivery from supplier, while Expenses are those expenses that
        are related to sales of the goods and operation of the entity ex delivery to buyer, Sales Tax, salary and rent etc</string>
    <string name="add_expenses">ADD EXPENSES</string>
    <string name="search">Search</string>
    <string name="mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="two_months">Two Months</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="opening_stock_message">Do you have some stock in store last year? Please note that closing stock last year is equivalent to opening stock this year, please input amount</string>
    <string name="input_opening_stock">Input opening stock</string>
    <string name="get_stock">Get Stock</string>
    <string name="add_sales_expenses">Sales Expenses</string>
    <string name="sign_out">Sign Out</string>
    <string name="transition_name">transit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="amp_expenses"><![CDATA[& Expenses]]></string>
    <string name="cost_of_sales">Cost of Sales</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="bank_account">Bank Account</string>
    <string name="cashbook">Cashbook</string>
    <string name="management">Management</string>
    <string name="inventory">Inventory</string>
    <string name="register_a_name_or_email">Register a name or email</string>
    <string name="register">Please register or sign-in with a name or email for security of your data</string>
    <string name="register_or_sign_in">Register or sign in</string>
    <string name="sign_in_sign_up">Sign-in/Sign-up</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="set_re_order_quantity">Set Re-order quantity</string>
    <string name="replenishment_notice">Stock is about to get empty, replenish now</string>
    <string name="bank">Bank</string>
    <string name="loading">Loading</string>
    <string name="search_again">Search</string>
    <string name="add_again">add</string>
    <string name="cs">CS</string>
    <string name="ex">EX</string>
    <string name="content_description_of_someone_with_calculator">A static picture of someone using calculator</string>
    <string name="image_of_a_box">image of a box</string>
    <string name="image_of_a_calculator">image of a calculator</string>
    <string name="cost_and_expensess">Cost And Expenses</string>
    <string name="date_">Date</string>
    <string name="description_">Description</string>
    <string name="dollar_sign">$</string>
    <string name="_000_">\'000</string>
    <string name="inventory_management_">Inventory Management</string>
    <string name="cashbook_and_bank_title">Cashbook and Bank</string>
    <string name="sales_cost_and_expenses_title">Sales Cost and Expenses</string>
    <string name="accounts_and_reports_title">Accounts and Reports</string>
    <string name="inventory_history_records_title">Inventory History/Records</string>
    <string name="price_list_title">Price List</string>
    <string name="sales_journal_history_title">Sales Journal/History</string>
    <string name="purchase_journal_history_title">Purchase Journal/History</string>
    <string name="account_receivables_title">Account Receivables</string>
    <string name="account_payables_title">Account Payables</string>
    <string name="profit_and_loss_account_title">Profit and Loss Account</string>
    <string name="back_up_restore_data_title">Back Up/Restore Data</string>
    <string name="export_data_to_csv_title">Export Data to CSV</string>
    <string name="import_data_from_csv_title">Import Data from CSV</string>
    <string name="share_it">Share</string>
    <string name="profit_and_loss_title">Profit and Loss</string>
    <string name="all_quarters_title">All Quarters</string>
    <string name="q1_title">Q1</string>
    <string name="q2_title">Q2</string>
    <string name="q3_title">Q3</string>
    <string name="sales_title">Sales</string>
    <string name="opening_stock_title">Opening Stock</string>
    <string name="purchases_title">Purchases</string>
    <string name="closing_stock_title">Closing Stock</string>
    <string name="_000_negative">(000)</string>
    <string name="gross_profit_title">Gross Profit</string>
    <string name="other_expenses_title">Other Expenses</string>
    <string name="net_profit_title">Net Profit</string>
    <string name="from_date">From: mm/dd/yyyy</string>
    <string name="to_date">To: mm/dd/yyyy</string>
    <string name="expenses_title">Expenses</string>
    <string name="bal">BAL</string>
    <string name="skdskfjdkfjkdjfkdjfk">skdskfjdkfjkdjfkdjfk</string>
    <string name="plus_sign">+</string>
    <string name="_0">0</string>
    <string name="negative_sign">-</string>
    <string name="remainder_stock">Remainder:</string>
    <string name="product_title">Coca Cola</string>
    <string name="purchases_title_widget">Purchases:</string>
    <string name="sales_title_widget">Sales:</string>
    <string name="qty_">Qty:</string>
    <string name="cost_price_">Cost Price:</string>
    <string name="sales_price_">Sales Price:</string>
    <string name="amount_">Amount:</string>
    <string name="welcome_user">Welcome</string>
    <string name="incoming_">Incoming:</string>
    <string name="outgoin_">Outgoing:</string>
    <string name="in_store_">In-Store:</string>
    <string name="instore_">In-Store:</string>
    <string name="purchase__">Purchases:</string>
    <string name="sales__">Sales:</string>
    <string name="accountpay">Account Payables</string>
    <string name="accountreceive">Account Receivables</string>
    <string name="update_">Update</string>
    <string name="loss_">Gross Loss</string>
    <string name="loss_net">Net Loss</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="transaction_completed">Transaction Completed</string>
    <string name="empty_fields">One or more fields are empty, please fill in completely</string>
    <string name="no_access">You do not have access to this app</string>
    <string name="signed_you_out">You are signed out</string>
    <string name="sign_in_successful">Sign In Successful</string>
    <string name="sign_in_aborted">Sign In Aborted</string>
    <string name="user_registered">User registered</string>
    <string name="sign_in_">Sign in successful</string>
    <string name="reset_account">Please reset account</string>
    <string name="field_empty">field is empty</string>
    <string name="account_reset">Please reset account</string>
    <string name="access_not">You do not have access to the database</string>
    <string name="file_not_found">file not found</string>
    <string name="operation_aborted">operation aborted</string>
    <string name="put_amount_or_cancel">Please input an amount or press \'No\' to cancel</string>
    <string name="salesprice_greater">Sales Price should be greater than Cost Price, did you give discount?</string>
    <string name="zero_quantity">Quantity cannot be zero</string>
    <string name="salesprice_cannot_be_less">Sales Price cannot be less than Cost Price</string>
    <string name="one_or_more_fieldempty">One or more of the field(s) are empty</string>
    <string name="incoming_or_outgoing">Incoming or Outgoing?, Please select the transaction type</string>
    <string name="reorder_level_message1">Some stock categories re-order level reached, replenish now</string>
    <string name="reorder_level_message2">Inventory is low</string>
    <string name="not_enough_stock">You have not enough stock of this category in store, replenish stock</string>
    <string name="leave_date_in_previous_format">Please leave the date in the previous format</string>
    <string name="saved_in_database">Data Saved into Database</string>
    <string name="enter_valid_date_format">Enter valid date format e.g 01/25/2019</string>
    <string name="expenses_recorded">Expenses recorded</string>
    <string name="field_not_complete">One or more fields are empty, please fill in completely</string>

</resources>
