<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.soyinka.soyombo.inventorymanagement.ExpensesListActivity">

    <LinearLayout
        android:id="@+id/expenses_slide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/start_datee"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:hint="@string/from_mm_dd_yyyy"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/end_datee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:hint="@string/to_mm_dd_yyyy"
                android:textSize="15sp" />

            <Button
                android:id="@+id/send_for_searche"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/search"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="4"
                android:text="@string/cost_and_expensess"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1.55"
                android:text="@string/date_"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2.05"
                android:text="@string/description_"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/cs"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/ex"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/dollar_sign"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/last_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="3.125"
                android:background="@drawable/border"
                android:text="@string/two_months"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/this_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="3.125"
                android:background="@drawable/border"
                android:text="@string/recent"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1.12"
                android:text="@string/_000_"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/expenses_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2081307953269103/8889566083" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="12dp"
        android:elevation="8dp"
        app:srcCompat="@drawable/ic_add_black_24dp"/>
</RelativeLayout>