<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/opening_stock_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/opening_stock_message"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/opening_stock_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:hint="@string/input_opening_stock" />

    <Button
        android:id="@+id/opening_stock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/get_stock" />


</LinearLayout>