<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal"
    tools:context="com.soyinka.soyombo.inventorymanagement.CashAndBankActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/border"
        android:padding="8dp"
        android:text="@string/date"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:background="@drawable/border"
        android:padding="8dp"
        android:text="@string/description"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/debit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:background="@drawable/border"
        android:padding="8dp"
        android:text="@string/dr"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/credit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:background="@drawable/border"
        android:padding="8dp"
        android:text="@string/cr"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:background="@drawable/border"
        android:padding="8dp"
        android:text="@string/cr"
        android:textSize="17sp" />

</LinearLayout>